--- a/src/CalcAmount/CalcAmount.csproj
+++ b/src/CalcAmount/CalcAmount.csproj
@@ -180,7 +180,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\ICurrenciesService.cs" />
+    <Compile Include="Models\CurrenciesResponse.cs" />
+    <Compile Include="Models\Rate.cs" />
+    <Compile Include="Models\RateResponse.cs" />
+    <Compile Include="Models\RatesRequest.cs" />
+    <Compile Include="Models\RatesResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CurrenciesService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -236,7 +243,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
