--- a/src/CalcAmount/packages.config
+++ b/src/CalcAmount/packages.config
@@ -22,8 +22,10 @@
   <package id="Swashbuckle" version="5.6.0" targetFramework="net48" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="9.0.6" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.Caching" version="9.0.6" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="Unity" version="5.11.10" targetFramework="net48" />
